# banksys_szai4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: analysis.py  app.py  config.py  data_loader.py  model.py
src/pages/: 1_📊_数据分析.py  2_🔮_在线预测.py
standards/: 00-project-context.md  01-requirements.md  PROGRESS.md
tests/: test_analysis.py  test_app.py  test_data_loader.py  test_model.py
