[project]
name = "banksys-szai4"
version = "0.1.0"
description = "银行营销数据分析与预测 Web 应用"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/model.py" = ["N806"]
"tests/test_model.py" = ["N806"]
"src/pages/*.py" = ["N999", "E402"]
"src/app.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src"]
omit = ["src/pages/*"]
